tests/snapshots/cli__bad_bare_path_external_glob_is_a_clean_config_error.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: in config file [CONFIG]: invalid `bare-path` external glob `[unclosed`: error parsing glob '[unclosed': unclosed character class; missing ']'
