tests/snapshots/cli__bad_budget_glob_is_a_clean_config_error_not_a_panic.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: in config file [CONFIG]: invalid `file-length` budget glob `[unclosed`: error parsing glob '[unclosed': unclosed character class; missing ']'
