tests/snapshots/cli__bad_descriptive_anchor_pattern_is_a_clean_config_error_not_a_panic.snap
---
source: tests/cli.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: in config file [CONFIG]: invalid `descriptive-anchor` pattern `ADR-(\d+`: regex parse error:
    ^(?:ADR-(\d+)$
     ^
error: unclosed group
