tests/snapshots/cli__bare_path_skips_a_gitignored_candidate.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: true
exit_code: 0
----- stdout -----
✓ ailint: checked 2 files, no findings

----- stderr -----
