tests/snapshots/cli__check_flags_a_file_over_the_default_line_budget.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
big.rs: [file-length] 701 lines exceeds the budget of 700 for `**/*.{rs,py,ts,tsx,js,jsx,vue,go,java,kt,c,cc,cpp,h,hpp,rb,swift,sh}`
  help: split the file or raise the `**/*.{rs,py,ts,tsx,js,jsx,vue,go,java,kt,c,cc,cpp,h,hpp,rb,swift,sh}` budget in ailint.toml
ailint: 1 finding

----- stderr -----
