tests/snapshots/cli__check_json_output_has_the_stable_schema.snap
---
source: tests/cli.rs
info:
  program: ailint
  args:
    - check
    - "--output-format"
    - json
---
success: false
exit_code: 1
----- stdout -----
{
  "version": 1,
  "summary": {
    "files_scanned": 1,
    "findings": 1
  },
  "diagnostics": [
    {
      "rule": "file-length",
      "path": "big.rs",
      "message": "701 lines exceeds the budget of 700 for `**/*.{rs,py,ts,tsx,js,jsx,vue,go,java,kt,c,cc,cpp,h,hpp,rb,swift,sh}`",
      "suggestion": "split the file or raise the `**/*.{rs,py,ts,tsx,js,jsx,vue,go,java,kt,c,cc,cpp,h,hpp,rb,swift,sh}` budget in ailint.toml",
      "span": null
    }
  ]
}

----- stderr -----
